@@ -19,6 +19,7 @@ import ti4.buttons.Buttons;
 import ti4.helpers.Constants;
 import ti4.helpers.twilightsfall.TwilightsFallInfoHelper;
 import ti4.image.Mapper;
+import ti4.map.Game;
 import ti4.map.Player;
 import ti4.message.MessageHelper;
 import ti4.message.componentsV2.MessageV2Builder;
@@ -385,8 +386,8 @@ public class AndcatReferenceCardsMessageHelper {
                 if (otherPlayerPicks.isEmpty()) {
                     continue;
                 }
-                ReferenceCardPackage otherRefPackage =
-                        draftable.getPackageByChoiceKey(otherPlayerPicks.get(0).getChoiceKey());
+                ReferenceCardPackage otherRefPackage = draftable.getPackageByChoiceKey(
+                        otherPlayerPicks.getFirst().getChoiceKey());
                 if (otherRefPackage == null) {
                     continue;
                 }
@@ -440,6 +441,7 @@ public class AndcatReferenceCardsMessageHelper {
             updatePackagePickSummary(draftManager);
 
             if (draftable.whatsStoppingSetup(draftManager) == null) {
+                printChoices(draftManager);
                 printSpeakerOrder(draftManager);
 
                 // TODO: Make sure setup messages go to the main game channel, not the event channel (e.g. frontier
@@ -557,6 +559,51 @@ public class AndcatReferenceCardsMessageHelper {
         return null;
     }
 
+    private void printChoices(DraftManager draftManager) {
+        Game game = draftManager.getGame();
+        for (Entry<String, PlayerDraftState> entry : draftManager.playerStates.entrySet()) {
+            String playerUserId = entry.getKey();
+            String playerName = game.getPlayer(playerUserId).getRepresentation(false, true, true, true);
+            PlayerDraftState playerDraftState = entry.getValue();
+            List<DraftChoice> picks = playerDraftState.getPicks(AndcatReferenceCardsDraftable.TYPE);
+
+            MessageV2Builder message = new MessageV2Builder(game.getActionsChannel());
+
+            if (picks.isEmpty()) {
+                message.append(Container.of(TextDisplay.of(playerName + " does not have any reference card picks.")));
+                message.send();
+                continue;
+            }
+
+            StringBuilder pickSummary = new StringBuilder(
+                    playerName + "'s reference card picks: " + System.lineSeparator() + System.lineSeparator());
+            ReferenceCardPackage refPackage =
+                    draftable.getPackageByChoiceKey(picks.getFirst().getChoiceKey());
+            if (refPackage.homeSystemFaction() != null) {
+                FactionModel homeSystemFaction = Mapper.getFaction(refPackage.homeSystemFaction());
+                pickSummary.append(TwilightsFallInfoHelper.getFactionSetupInfo(homeSystemFaction, false, true, false));
+            } else {
+                pickSummary.append(" Home System: None").append(System.lineSeparator());
+            }
+            if (refPackage.startingUnitsFaction() != null) {
+                FactionModel startingUnitsFaction = Mapper.getFaction(refPackage.startingUnitsFaction());
+                pickSummary.append(
+                        TwilightsFallInfoHelper.getFactionSetupInfo(startingUnitsFaction, true, false, false));
+            } else {
+                pickSummary.append(" Starting Units: None").append(System.lineSeparator());
+            }
+            if (refPackage.speakerOrderFaction() != null) {
+                FactionModel speakerOrderFaction = Mapper.getFaction(refPackage.speakerOrderFaction());
+                pickSummary.append(
+                        TwilightsFallInfoHelper.getFactionSetupInfo(speakerOrderFaction, false, false, true));
+            } else {
+                pickSummary.append(" Priority Number: None").append(System.lineSeparator());
+            }
+            message.append(Container.of(TextDisplay.of(pickSummary.toString())));
+            message.send();
+        }
+    }
+
     private void printSpeakerOrder(DraftManager draftManager) {
         Map<Integer, String> playersByPriorityNumber = new HashMap<>();
         List<String> unorderedPlayers = new ArrayList<>();
@@ -570,7 +617,7 @@ public class AndcatReferenceCardsMessageHelper {
             }
 
             ReferenceCardPackage refPackage =
-                    draftable.getPackageByChoiceKey(picks.get(0).getChoiceKey());
+                    draftable.getPackageByChoiceKey(picks.getFirst().getChoiceKey());
 
             if (refPackage.speakerOrderFaction() == null) {
                 unorderedPlayers.add(playerUserId);
